--- a/BigSchool_NguyenPhuocSang/Views/Courses/Create.cshtml
+++ b/BigSchool_NguyenPhuocSang/Views/Courses/Create.cshtml
@@ -7,6 +7,7 @@
 <h2>Create</h2>
     @using (Html.BeginForm("Create", "Courses"))
     {
+        @Html.AntiForgeryToken()
         <div class="form-group">
             @Html.LabelFor(m => m.Place)
             @Html.TextBoxFor(m => m.Place, new { @class = "form-control" })
@@ -30,7 +31,10 @@
         </div>
         <button type="submit" value="Save" class="btn btn-primary">Save</button>
     }
-    <div class="form-group"></div>
-    <div class="form-group"></div>
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval");
+}
+
 
 
